--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,6 +26,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "./",
               "outputPath": "dist/frontend",
               "budgets": [
                 {
