actualizando el link de la db

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://resto_db_render_user:CgdYLN1ui4B9HLeweeShwNaxwPRwQpN5@dpg-d23vk7e3jp1c73aeia8g-a.oregon-postgres.render.com/resto_db_render
+DATABASE_URL=postgresql://resto_db_render_efhr_user:XCWPTn7qWpukNBKqBwkwbLsaxehyOzCG@dpg-d24312buibrs73a63820-a.oregon-postgres.render.com/resto_db_render_efhr
